--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
         <vaadin.version>14.4.9</vaadin.version>
         <jetty.version>9.4.31.v20200723</jetty.version>
+        <junit.jupiter.version>5.7.0</junit.jupiter.version>
     </properties>
 
     <repositories>
@@ -110,6 +111,26 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Browserless Testing, see https://github.com/mvysny/karibu-testing -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.mvysny.kaributesting</groupId>
+            <artifactId>karibu-testing-v10</artifactId>
+            <version>1.2.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
