--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "2.5.0",
+      "lit-element": "2.5.1",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-core-shrinkwrap": "14.5.5",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -48,7 +48,7 @@
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.3.0",
       "@vaadin/vaadin-avatar": "1.0.4",
-      "lit-html": "1.4.0"
+      "lit-html": "1.4.1"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -61,9 +61,15 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.11.0",
       "ts-loader": "8.0.12",
-      "typescript": "4.0.3"
+      "typescript": "4.0.3",
+      "css-loader": "4.2.1",
+      "file-loader": "6.1.0",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "lit-css-loader": "0.0.4",
+      "construct-style-sheets-polyfill": "2.4.6",
+      "extract-loader": "5.1.0"
     },
-    "hash": "57b1a27d37cdcc5c940515555305f1f2fecda919ee0cdc692e2a6c93a378327f"
+    "hash": "32321ed16c4e50b3b279f052509636ca4cda418bc870d2743a3b09f60f2475f1"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -76,7 +82,7 @@
     "@vaadin/vaadin-checkbox": "2.5.0",
     "@vaadin/vaadin-combo-box": "5.4.7",
     "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.5.5",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.1",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
     "@vaadin/vaadin-date-time-picker": "1.4.0",
@@ -102,13 +108,19 @@
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "2.5.0",
-    "lit-html": "1.4.0"
+    "lit-element": "2.5.1",
+    "lit-html": "1.4.1"
   },
   "devDependencies": {
     "chokidar": "^3.5.0",
     "compression-webpack-plugin": "4.0.1",
+    "construct-style-sheets-polyfill": "2.4.6",
     "copy-webpack-plugin": "5.1.2",
+    "css-loader": "4.2.1",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "extract-loader": "5.1.0",
+    "file-loader": "6.1.0",
+    "lit-css-loader": "0.0.4",
     "raw-loader": "3.1.0",
     "ts-loader": "8.0.12",
     "typescript": "4.0.3",
